Added more spacing and better HTML structure

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -47,6 +47,10 @@ p {
     background-color: $secondary-background;
 }
 
+.margin-bottom {
+    margin-bottom: 4vw;
+}
+
 
 /********** HEADER **********/
 .site-header {
