--- a/css/custom.css
+++ b/css/custom.css
@@ -37,6 +37,10 @@ p {
   background-color: #14100c;
 }
 
+.margin-bottom {
+  margin-bottom: 4vw;
+}
+
 /********** HEADER **********/
 .site-header {
   background-color: rgba(0, 0, 0, 0.5411764706);
